--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="AntTest" default="dist" basedir=".">
+<project name="Ant" default="dist" basedir=".">
   <description>
     simple example build file
   </description>
